# es-sync-gateway-rs

./: Cargo.toml  Makefile  README.md
config/: template.yaml
crates/es-gateway-core/: Cargo.toml
crates/es-gateway-core/src/: config.rs  error.rs  filter.rs  lib.rs  message.rs  metrics.rs  strategy.rs
crates/es-watcher/: Cargo.toml
crates/es-watcher/src/: checkpoint.rs  es_client.rs  lib.rs  main.rs  publisher.rs  source.rs
crates/es-writer/: Cargo.toml
crates/es-writer/src/: batcher.rs  bulk_writer.rs  consumer.rs  dlq.rs  lib.rs  main.rs  retry.rs
crates/nats-gateway/: Cargo.toml
crates/nats-gateway/src/: admin_api.rs  embedded.rs  filter_engine.rs  lib.rs  main.rs  server.rs  transform.rs
