[workspace]
resolver = "2"
members = [
    "crates/es-gateway-core",
    "crates/es-watcher",
    "crates/nats-gateway",
    "crates/es-writer",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["EngineVector <info@enginevector.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/enginevector/es-sync-gateway-rs"
rust-version = "1.83"

[workspace.dependencies]
# Internal crates
es-gateway-core = { path = "crates/es-gateway-core" }
es-watcher = { path = "crates/es-watcher" }
nats-gateway = { path = "crates/nats-gateway" }
es-writer = { path = "crates/es-writer" }

# Async runtime
tokio = { version = "1.42", features = ["full", "tracing"] }

# NATS client with JetStream
async-nats = "0.38"

# Elasticsearch client
elasticsearch = "8.15"

# HTTP client (for ES)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
config = "0.14"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async traits
async-trait = "0.1"

# Utilities
uuid = { version = "1.11", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.9"
url = { version = "2.5", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Testing
tokio-test = "0.4"
mockall = "0.13"
testcontainers = "0.23"

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-debug]
inherits = "release"
debug = true
strip = false
