[package]
name = "es-writer"
description = "Elasticsearch bulk writer for ES Sync Gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "es-writer"
path = "src/main.rs"

[dependencies]
es-gateway-core = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
async-nats = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
mockall = { workspace = true }
